# candy-rs

./: Cargo.toml  LICENSE  README.md
examples/: catch.rs  do_loop.rs  fallible.rs
src/: lib.rs
